--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -1,30 +1,134 @@
-<div class="file_sys_container" id="file_sys_container">
+<div class="file_sys_container side_bar_expand" id="file_sys_container">
     <div class="file_sys_header">
-        <div class="file_sys_side_button" id="file_sys_side_button">
-            <img class="file_sys_side_icon" src="sources?filename=icons/menu.png">
+        <div class="file_sys_header_icon clickable" id="file_sys_side_button">
+            <img class="file_sys_header_icon" src="sources?filename=icons/menu.png">
         </div>
         <div class="file_sys_header_title">文件管理器</div>
-        <div class="file_sys_header_icon">
+        <div class="file_sys_header_icon clickable">
             <img src="/sources?filename=icons/notification.png">
         </div>
-        <div class="file_sys_header_icon">
+        <div class="file_sys_header_icon clickable">
             <img src="/sources?filename=icons/setting.png">
         </div>
-        <div class="file_sys_header_icon">
+        <div class="file_sys_header_icon clickable">
             <img src="/sources?filename=icons/user.png">
         </div>
     </div>
     <div class="file_sys_body">
         <div class="file_sys_menu">
             <button class="file_sys_menu_button clickable" id="file_add_pop_button">+新增</button>
-            <div class="file_sys_menu_label">
-                <span>菜单</span>
-            </div>
-            <div class="file_sys_menu_item clickable" id="all_file_button">
-                <div class="file_sys_menu_icon">
-                    <img src="/sources?filename=icons/all_file.png">
+            <div class="file_sys_menu_list">
+                <div class="file_sys_menu_label">
+                    <span>菜单</span>
                 </div>
-                <a class="file_sys_menu_text clickable">所有文件</a>
+                <div class="file_sys_menu_item clickable" id="all_file_button">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
+                <div class="file_sys_menu_item clickable">
+                    <div class="file_sys_menu_icon">
+                        <img src="/sources?filename=icons/all_file.png">
+                    </div>
+                    <a class="file_sys_menu_text clickable">所有文件</a>
+                </div>
             </div>
         </div>
         <div class="file_sys_panel">
@@ -58,7 +162,7 @@
         </div>
     </div>
 </div>
-<div class="popup_container">
+<div class="popup_container hidden">
     <div class="file_add_content hidden" id="file_add_content">
         <div class="file_add_header">
             <a class="file_add_header_text" id="file_add_header_text">新增文件</a>
