--- a/sources/templates/login.html
+++ b/sources/templates/login.html
@@ -1,13 +1,14 @@
 {% extends 'common/page_web_base.html' %}
 
 {% block css_file %}
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/login_style.css')}}"/>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/login_style.css')}}"/>
 {% endblock %}
 
 {% block body_content %}
     {% include 'common/page_login.html' %}
+    {% include 'common/comp_popup_message.html' %}
 {% endblock %}
 
 {% block js_file %}
-<script type="module" src="{{url_for('static', filename='/js/sixbox/login.js')}}"></script>
+    <script type="module" src="{{url_for('static', filename='/js/sixbox/login.js')}}"></script>
 {% endblock %}
