--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -60,11 +60,145 @@
     width: 100vw;
     margin: 0px;
 }
+.body_theme{
+    /*主题Body*/
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: background-image 1s ease-in-out;
+    margin: 0px;
+    display: flex;
+    font-family: 'poppins';
+    background-color: var(--theme-main-color);
+}
+
+/*----消息弹窗----*/
+.message_container{
+    /*消息容器*/
+    min-width: calc(var(--message-item-width) + var(--element-gap) * 3 + var(--icon-base-size));
+    max-width: calc(100% - var(--element-gap)* 2);
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1;
+    top: 0%;
+    left:50%;
+    transform: translateX(-50%);
+}
+.message_item{
+    /*正常的消息容器*/
+    width: 100%;
+    min-width: calc(var(--message-item-width) + var(--element-gap) * 3 + var(--icon-base-size));
+    max-width: calc(100% - var(--element-gap)* 2);
+    min-height: var(--message-item-height);
+    background-color: var(--message-background-color);
+    display: flex;
+    align-items: start;
+    margin-top: var(--element-margin);
+    animation: slide-down 0.5s ease-out forwards, fade-out 5s ease-in-out forwards;
+    border-radius: var(--border-min-radius);
+    border: var(--border-base-width) solid var(--message-text-color);
+    box-sizing: border-box;
+    padding-left: var(--element-margin);
+    padding-right: var(--element-margin);
+}
+.error_message_item{
+    /*警告的消息容器*/
+    width: 100%;
+    min-width: calc(var(--message-item-width) + var(--element-gap) * 3 + var(--icon-base-size));
+    max-width: calc(100% - var(--element-gap)* 2);
+    min-height: var(--message-item-height);
+    background-color: var(--error-background-color);
+    display: flex;
+    align-items: start;
+    margin-top: var(--element-margin);
+    animation: slide-down 0.5s ease-out forwards, fade-out 5s ease-in-out forwards;
+    border-radius: var(--border-min-radius);
+    border: var(--border-base-width) solid var(--error-border-color);
+    box-sizing: border-box;
+    padding-left: var(--element-margin);
+    padding-right: var(--element-margin);
+}
+.message_icon{
+    /*消息图标*/
+    width: var(--icon-base-size);
+    padding-top: 8px;
+    margin-right: var(--element-margin);
+}
+.error_message_icon{
+    /*警告消息图标*/
+    width: var(--icon-base-size);
+    padding-top: 8px;
+    margin-right: var(--element-margin);
+}
+.message_text{
+    /*消息文本*/
+    width: 100%;
+    flex-grow: 1;
+    font-size: var(--text-label-size);
+    color: var(--message-text-color);
+    white-space: normal;
+    padding-top: var(--element-margin);
+    padding-bottom: var(--element-margin);
+}
+.error_message_text{
+    /*警告消息文本*/
+    width: 100%;
+    flex-grow: 1;
+    font-size: var(--text-label-size);
+    color: var(--error-text-color);
+    white-space: normal;
+    padding-top: var(--element-margin);
+    padding-bottom: var(--element-margin);
+}
+
+/*弹窗*/
+.popup_container{
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1;
+    left:50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/*动画*/
+@keyframes slide-down{
+    from{
+        opacity: 0,
+        transform: translateY(-20px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes fade-out{
+    from{
+        opacity: 1,
+    }
+    to{
+        opacity: 0;
+    }
+}
 
 /*用于动态控制*/
 .hidden{
     /*隐藏元素*/
     display: none;
+}
+.clickable{
+    cursor: pointer;  /*使鼠标手势变为可操作的手势*/
+}
+.margin_trans{
+    /*边缘变换动画*/
+    transition: margin 1s ease;
 }
 
 /*响应式*/
