--- a/sources/templates/common/comp_popup_message.html
+++ b/sources/templates/common/comp_popup_message.html
@@ -1,1 +1,1 @@
-<div class="message_container"></div>
+<div class="message_container" id="{% block message_container_id %}message_container_id{% endblock %}"></div>
