--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -1,7 +1,7 @@
 <div class="file_sys_container side_bar_expand" id="file_sys_container">
     <div class="file_sys_header">
         <div class="file_sys_header_icon clickable" id="file_sys_side_button">
-            <img class="file_sys_header_icon" src="sources?filename=icons/menu.png">
+            <img src="sources?filename=icons/menu.png">
         </div>
         <div class="file_sys_header_title">文件管理器</div>
         <div class="file_sys_header_icon clickable">
@@ -17,132 +17,31 @@
     <div class="file_sys_body">
         <div class="file_sys_menu">
             <button class="file_sys_menu_button clickable" id="file_add_pop_button">+新增</button>
-            <div class="file_sys_menu_list">
-                <div class="file_sys_menu_label">
-                    <span>菜单</span>
-                </div>
-                <div class="file_sys_menu_item clickable" id="all_file_button">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
+            <dd class="file_sys_menu_list">
+                <dl class="file_sys_menu_row">
+                    <div class="file_sys_menu_label">
+                        <span>菜单</span>
                     </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
+                    <div class="file_sys_menu_item clickable" id="all_file_button">
+                        <div class="file_sys_menu_icon">
+                            <img src="/sources?filename=icons/all_file.png">
+                        </div>
+                        <a class="file_sys_menu_text clickable">所有文件</a>
                     </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-                <div class="file_sys_menu_item clickable">
-                    <div class="file_sys_menu_icon">
-                        <img src="/sources?filename=icons/all_file.png">
-                    </div>
-                    <a class="file_sys_menu_text clickable">所有文件</a>
-                </div>
-            </div>
+                </dl>
+            </dd>
         </div>
         <div class="file_sys_panel">
             <div class="file_sys_search_bar">
-                <div class="file_path_bar"></div>
+                <div class="file_path_bar" id="file_path_bar">
+                    <img src="/sources?filename=icons/open_folder.png" class="file_search_icon">
+                </div>
                 <div class="file_search_bar">
                     <img src="/sources?filename=icons/magnifier.png" class="file_search_icon">
                     <input placeholder="输入文本搜索" class="file_search_input">
                 </div>
             </div>
             <div class="file_sys_list_body">
-                <div class="file_list_title hidden">
-                    <span>最近使用的文件</span>
-                </div>
                 <div class="file_table_header">
                     <div class="file_table_header_text">文件名</div>
                     <div class="file_table_header_text">修改日期</div>
@@ -150,51 +49,15 @@
                     <div class="file_table_header_text">大小</div>
                     <div class="file_table_header_text">操作</div>
                 </div>
-                <div class="file_table_body" id="file_table_body">
-                </div>
+                <dd class="file_table_body">
+                    <dl class="file_table_row" id="file_table_body">
+                    </dl>
+                </dd>
                 <div class="file_page_bar">
-                    <div class="file_page_info"></div>
-                    <div class="file_page_icon"></div>
-                    <div class="file_page_num"></div>
-                    <div class="file_page_icon"></div>
+                    {% include 'common/comp_page_selector.html'%}
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="popup_container hidden">
-    <div class="file_add_content hidden" id="file_add_content">
-        <div class="file_add_header">
-            <a class="file_add_header_text" id="file_add_header_text">新增文件</a>
-            <img class="file_add_icon" src="/sources?filename=icons/add_folder_blue.png" id="file_add_icon">
-        </div>
-        <form class="file_add_form" id="file_add_form">
-            <label for="file_add_name" class="file_add_label">文件名</label>
-            <input id="file_add_name" type="text" required placeholder="请输入文件名" class="file_add_field">
-            <label for="file_add_folder_select" class="file_add_label">文件夹</label>
-            <select id="file_add_folder_select" required class="file_add_choose">
-            </select>
-            <label for="file_add_select" class="file_add_label">文件</label>
-            <div class="file_add_item">
-                <input id="file_add_select" type="text" required readonly placeholder="请选择文件" class="file_add_field">
-                <input id="file_add_select_element" type="file" placeholder="请选择文件" class="hidden">
-                <input id="file_add_item_button" type="button" value="选择文件" class="file_add_item_button">
-            </div>
-            <div class="file_button_row">
-                <input id="file_add_confirm" type="submit" value="确认" class="file_add_button">
-                <input id="file_add_cancel" type="button" value="取消" class="file_add_button">
-            </div>
-        </form>
-        <form class="file_add_form hidden" id="folder_add_form">
-            <label for="folder_add_name" class="file_add_label">文件夹名</label>
-            <input id="folder_add_name" type="text" required placeholder="请输入文件夹名" class="file_add_field">
-            <label for="folder_add_folder_select" class="file_add_label">文件夹</label>
-            <select id="folder_add_folder_select" required class="file_add_choose">
-            </select>
-            <div class="file_button_row">
-                <input id="folder_add_confirm" type="submit" value="确认" class="file_add_button">
-                <input id="folder_add_cancel" type="button" value="取消" class="file_add_button">
-            </div>
-        </form>
-    </div>
-</div>
+{% include 'common/comp_file_add_popup.html'%}
