--- a/sources/templates/common/comp_file_add_popup.html
+++ b/sources/templates/common/comp_file_add_popup.html
@@ -1,5 +1,5 @@
-<div class="popup_container">
-    <div class="file_add_content hidden" id="file_add_content">
+<div class="popup_container hidden" id="file_add_popup_overlay">
+    <div class="file_add_content" id="file_add_content">
         <div class="file_add_header">
             <a class="file_add_header_text" id="file_add_header_text">新增文件</a>
             <img class="file_add_icon" src="/sources?filename=icons/add_folder_blue.png" id="file_add_icon">
