--- a/sources/static/css/file_sys_style.css
+++ b/sources/static/css/file_sys_style.css
@@ -328,18 +328,33 @@
     justify-content: center;
 }
 .file_control_img{
-    width: var(--icon-min-size);
+    width: var(--icon-base-size);
+    border: 2px solid var(--theme-active-color);
+    border-radius: var(--border-min-radius);
+    transition: border-color 0.5s ease;
+}
+.file_control_img:hover{
+    border-color: var(--theme-part-color);
 }
 .file_add_content{
     width: var(--pop-form-width);
     background-color: white;
-    border: var(--border-popup-width) solid var(--text-main-color);
+    border: 2px solid var(--theme-main-color);
     display: flex;
     flex-direction: column;
     padding: var(--element-gap);
     border-radius: var(--border-radius);
     box-sizing: border-box;
     transition: height 1s ease, width 1s ease;
+}
+.file_control_content{
+    background-color: white;
+    border: 2px solid var(--theme-main-color);
+    display: flex;
+    flex-direction: column;
+    padding: var(--element-gap);
+    border-radius: var(--border-radius);
+    box-sizing: border-box;
 }
 .file_add_header{
     width: 100%;
