--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -156,10 +156,12 @@
 
 /*弹窗*/
 .popup_container{
+    height: 100%;
     width: 100%;
     max-height: 100%;
     overflow-y: auto;
     align-items: center;
+    justify-content: center;
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -167,6 +169,14 @@
     left:50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+.popup_fixed_container{
+    height: 100%;
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    position: fixed;
+    z-index: 1;
 }
 
 /*动画*/
